--- a/demo.html
+++ b/demo.html
@@ -23,6 +23,7 @@
     <script src="Disk.js" type="text/javascript"></script>
     <script src="Light.js" type="text/javascript"></script>
     <script src="Quad.js" type="text/javascript"></script>
+    <script src="IsoFloor.js" type="text/javascript"></script>
     <script src="SixSidedPrism.js" type="text/javascript"></script>
     <script src="Maze.js" type="text/javascript"></script>
     <script src="Skybox.js" type="text/javascript"></script>
@@ -296,7 +297,7 @@ void main(void) {
     </script>
   </head>
 
-  <body onload="theCanvas = new GLcanvas();">
+  <body onload="theCanvas = new GLcanvas(); theCanvas.start('game');">
     <div id='wrap'>
       <div id='header'>
         <div class='one_third'>
@@ -365,7 +366,7 @@ void main(void) {
 			Your browser doesn't appear to support the HTML5 
 			<code>&lt;canvas&gt;</code> element.
 	    </canvas>
-          <div class="title" id="title2">            
+          <div class="title" id="title2"		   >            
             <input type="button" 
 		   onclick="expand('title2', 'webgl_object'); theCanvas.start('cylinder');" 
 		   value="Cylinder" 
@@ -398,8 +399,8 @@ void main(void) {
 		   style="width:15%;"/>
 	    <br/>
             <input type="button" 
-		   onclick="expand('title2', 'webgl_object'); theCanvas.start('shadow');" 
-		   value="Shadows" 
+		   onclick="expand('title2', 'webgl_object'); theCanvas.start('game');" 
+		   value="Game" 
 		   class="button_add"
 		   style="width:15%;"/>
             <input type="button" 
